Improve frontend layout
